force-app/main/default/objects/copado__User_Story__c/fields/copado__Last_Validation_Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Last_Validation_Deployment_Status__c</fullName>
    <description>Status of the latest validation Promotion for the User Story.</description>
    <formula>IF(copado__Last_Validation_Deployment__r.copado__Date__c &lt; copado__Latest_Commit_Date__c,
IMAGE(&#39;/img/msg_icons/warning16.png&#39;,&#39;OutDated&#39;)+&quot; &quot;+&quot;Validation Outdated&quot;, 
   IF(AND(NOT(ISBLANK(copado__Last_Validation_Promotion__c)),
                               (CONTAINS(TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),&#39;error&#39;)) || ISPICKVAL(copado__Last_Validation_Promotion__r.copado__Status__c, &#39;Validation failed&#39;)),
               IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;failed&quot;)+&quot; &quot;+TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),
               IF(AND(NOT(ISBLANK(copado__Last_Validation_Promotion__c)),
                               (CONTAINS(TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),&#39;Successfully&#39;)) || ISPICKVAL(copado__Last_Validation_Promotion__r.copado__Status__c, &#39;Validated&#39;)),
                           IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;completed&quot;)+&quot; &quot;+TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),
                           TEXT(copado__Last_Validation_Promotion__r.copado__Status__c)
                       )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of the latest validation Promotion for the User Story.</inlineHelpText>
    <label>Last Validation Status</label>
    <type>Text</type>
</CustomField>