force-app/main/default/objects/copado__User_Story__c/fields/copado__Manual_Step_Required__c.field-meta.xml
<CustomField>
    <fullName>copado__Manual_Step_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If any of the Quality Gates are Manual Steps (Pull Request, Manual Test, or Manual Approval), the story should be marked as &#39;Manual Step Required&#39;.</description>
    <label>Manual Step Required</label>
    <type>Checkbox</type>
</CustomField>